tests/compile_fail/delegate-empty.stderr
error: unexpected end of input, expected expression
 --> $DIR/delegate-empty.rs:5:1
  |
5 | #[delegate]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
